<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="40dp"
    tools:context=".Login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/sfbold"
            android:text="@string/login_header"
            android:textColor="#fff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sfregular"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="#F7F7F7"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/home_text_view"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/sfregular"
            android:hint="@string/login_country_code_hint"
            android:padding="15dp"
            android:paddingStart="25dp"
            android:textColorHint="@color/hint_color"
            android:textSize="17sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/home_text_view"
            android:drawableStart="@drawable/phone_icon"
            android:drawableEnd="@drawable/check_icon"
            android:drawablePadding="20dp"
            android:fontFamily="@font/sfregular"
            android:hint="@string/login_phone_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="15dp"
            android:paddingStart="25dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="17sp"
            tools:ignore="RtlSymmetry" />

        <include
            android:id="@+id/login_button"
            layout="@layout/main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sfmedium"
            android:gravity="center"
            android:text="@string/login_new_user"
            android:textColor="#F7F7F7"
            android:textSize="17sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>