<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="40dp"
    tools:context=".Register.Mail">

    <ImageView
        android:id="@+id/back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/sfbold"
            android:text="@string/mail_header"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sfregular"
            android:gravity="center"
            android:text="@string/mail_text"
            android:textColor="@color/subtitle_color"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/mail_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/home_text_view"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="20dp"
            android:fontFamily="@font/sfregular"
            android:hint="@string/mail_student_address"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:paddingStart="25dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="17sp"
            tools:ignore="RtlSymmetry" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/student_radio"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_student_selector"
                android:button="@color/white"
                android:clickable="false"
                android:fontFamily="@font/sfsemibold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/mail_student_option"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/academician_radio"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_teacher_selector"
                android:button="@color/white"
                android:clickable="false"
                android:fontFamily="@font/sfsemibold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/mail_academician_option"
                android:textColor="@color/white" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/mail_button"
            layout="@layout/main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp" />

        <TextView
            android:id="@+id/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sfmedium"
            android:gravity="center"
            android:text="@string/mail_login_text"
            android:textColor="@color/subtitle_color"
            android:textSize="17sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>