<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="40dp"
    tools:context=".Register.Face">

    <ImageView
        android:id="@+id/back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/sfbold"
            android:text="@string/face_header"
            android:textColor="#fff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sfregular"
            android:gravity="center"
            android:text="@string/face_text"
            android:textColor="#F7F7F7"
            android:textSize="17sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/vector_image"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/face_id_icon" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:cardCornerRadius="500dp">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:cpb_background_progressbar_color="#3D447B"
                app:cpb_background_progressbar_width="5dp"
                app:cpb_progress="0"
                app:cpb_progress_direction="to_right"
                app:cpb_progress_max="100"
                app:cpb_progressbar_color="#009FD4"
                app:cpb_progressbar_width="3dp"
                app:cpb_round_border="false" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/face_warning_1"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/face_warning_2"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/face_warning_3"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/face_warning_4"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/scan_face"
            layout="@layout/main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>